--- a/css/medium.css
+++ b/css/medium.css
@@ -8,7 +8,9 @@
     
     /*----------- HEADER --------------*/
     
-    
+    img{
+        max-width: 120px;
+    }
     
     /*----------- NAVIGATION --------------*/
         nav ul {
