--- a/css/large.css
+++ b/css/large.css
@@ -9,7 +9,6 @@
 /*----------- BODY --------------*/
 
 
-
 /*----------- HEADER --------------*/
 
 
@@ -24,4 +23,4 @@
 
 /*----------- FOOTER --------------*/
     
-} /* end of media query */
+}
