--- a/css/small.css
+++ b/css/small.css
@@ -9,20 +9,33 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
+    margin: 0;
 }
 
 
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
-    background-color: #ddd;
+    background-color: rgb(255, 66, 66);
 display: grid;
 grid-template-columns: 75px auto;
 }
-header div{margin-left: 10px;}
+header div{margin-left: 70px;}
 header h1 {margin: 0;}
 header h2 {margin: 0; font-weight: normal;}
-
+.date{
+    background-color: #aaa;
+    padding: 10px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    grid-column: 1 /span 2;
+    display: flex;
+}
+img{
+    max-width: 120px;
+}
 /*----------- NAVIGATION --------------*/
 nav {
     background-color: #666;
@@ -56,11 +69,33 @@ main {
     padding: 0 2%;
     min-height: 10rem;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto;
+    gap: 10px;
+    padding: 10px;
+  }
+  .item2 {
+    grid-area: 1 / 2 / 3/ 4;
+  }
+  .item7 {
+    grid-column: 2 /span 3;
+  }
 
+  .grid-container > div {
+    background-color: rgba(224, 133, 133, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+
+  
 
 /*----------- FOOTER --------------*/
 footer {
     background-color: #ddd;
     padding: .5rem 2%;
-    text-align: center;
+    display: flex;
+    column-gap: 20px;
 }
