--- a/css/small.css
+++ b/css/small.css
@@ -72,7 +72,7 @@ main {
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 250px 250px 200px;
     gap: 10px;
     padding: 10px;
   }
