--- a/css/large.css
+++ b/css/large.css
@@ -5,29 +5,56 @@
         max-width: 64rem;
         margin:auto;
     }
-.item2{
-    background-image: url('Screenshot\(221\).png');
-    text-align: center;
+main{
+    margin-bottom: 20px;
 }
 .box{
     background-color: aquamarine;
     opacity: 0.5;
-    margin: 50px
-/*----------- BODY --------------*/
-
-
-/*----------- HEADER --------------*/
-
-
-
-/*----------- NAVIGATION --------------*/
-
-
-
-/*----------- MAIN --------------*/
-
-
-
-/*----------- FOOTER --------------*/
-    
+    margin: 50px;
 }
+.links{
+    margin-left: 480px;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    justify-content: center;
+    margin: auto;
+  }
+.item1{
+  grid-column: 1/1;
+  grid-row: 1;
+  height: auto;
+}
+.item2{
+  grid-column: 2/5;
+  grid-row: 1/3;
+  height: auto;
+}
+.item3{
+  grid-column: 5/5;
+  grid-row: 1;
+  height: auto;
+}
+.item4{
+  grid-column: 1/1;
+  grid-row: 2;
+  height: auto;
+}
+.item5{
+  grid-column: 5/5;
+  grid-row: 2;
+  height: auto;
+}
+.item6{
+  grid-column: 1/1;
+  grid-row: 3;
+  height: auto;
+}
+.item7{
+  grid-column: 2/6;
+  grid-row: 3;
+  height: auto;
+}}
