--- a/css/medium.css
+++ b/css/medium.css
@@ -23,8 +23,49 @@
     
     
     /*----------- MAIN --------------*/
-    
-    
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+      }
+      .item1{
+        grid-column: 1/3;
+        grid-row: 1;
+        height: auto;
+    }
+    .item2{
+        grid-column: 1/3;
+        grid-row: 2;
+        height: auto;
+        background-image: url('Screenshot\(221\).png');
+        text-align: center;
+    }
+    .item3{
+        grid-column: 1/2;
+        grid-row: 3;
+        height: auto;
+    }
+    .item4{
+        grid-column: 2/3;
+        grid-row: 3;
+        height: auto;
+    }
+    .item5{
+        grid-column: 1/2;
+        grid-row: 5;
+        height: auto;
+    }
+    .item6{
+        grid-column: 2/3;
+        grid-row: 5;
+        height: auto;
+    }
+    .item7{
+        grid-column: 1/3;
+        grid-row: 7;
+        height: auto;
+    }
+      
     
     /*----------- FOOTER --------------*/
         
