--- a/css/small.css
+++ b/css/small.css
@@ -68,28 +68,60 @@ nav ul li.active a {
 main {
     padding: 0 2%;
     min-height: 10rem;
+    margin-bottom: 20px;
 }
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: 250px 250px 200px;
-    gap: 10px;
-    padding: 10px;
+        display: grid;
+       grid-template-columns: 1fr 1fr;
+       gap: 10px;
+       justify-content: center;
+       align-content: center;
   }
-  .item2 {
-    grid-area: 1 / 2 / 3/ 4;
-  }
-  .item7 {
-    grid-column: 2 /span 3;
-  }
+ 
 
   .grid-container > div {
     background-color: rgba(224, 133, 133, 0.8);
     text-align: center;
     padding: 20px 0;
-    font-size: 30px;
+    font-size: 10px;
   }
-
+.item1{
+    grid-column: 1/3;
+    grid-row: 1;
+    height: auto;
+}
+.item2{
+    grid-column: 1/3;
+    grid-row: 2;
+    height: auto;
+    background-image: url('Screenshot\(221\).png');
+    text-align: center;
+    }
+.item3{
+    grid-column: 1/3;
+    grid-row: 3;
+    height: auto;
+}
+.item4{
+    grid-column: 1/3;
+    grid-row: 4;
+    height: auto;
+}
+.item5{
+    grid-column: 1/3;
+    grid-row: 5;
+    height: auto;
+}
+.item6{
+    grid-column: 1/3;
+    grid-row: 6;
+    height: auto;
+}
+.item7{
+    grid-column: 1/3;
+    grid-row: 7;
+    height: auto;
+}
   
 
 /*----------- FOOTER --------------*/
