--- a/css/medium.css
+++ b/css/medium.css
@@ -8,7 +8,7 @@
     
     /*----------- HEADER --------------*/
     
-    img{
+    .logo{
         max-width: 120px;
     }
     
@@ -28,6 +28,10 @@
         grid-template-columns: 1fr 1fr;
         gap: 10px;
       }
+      .hero-image{
+        max-width: 650px;
+        margin: 23px
+    }
       .item1{
         grid-column: 1/3;
         grid-row: 1;
