--- a/css/large.css
+++ b/css/large.css
@@ -15,7 +15,9 @@ main{
 .box{
     background-color: aquamarine;
     opacity: 0.5;
-    margin: 50px;
+    margin: 65px;
+    height: 90px;
+    padding: 7px;
 }
 .links{
     margin-left: 480px;
@@ -61,4 +63,16 @@ main{
   grid-column: 2/6;
   grid-row: 3;
   height: auto;
-}}
+}
+footer {
+  background-color: #ddd;
+  padding: .5rem 2%;
+  display: flex;
+flex-direction: row;
+align-items: flex-start;
+gap: 20px;
+}
+.p{
+  margin-top: 10px;
+}
+}
