--- a/css/medium.css
+++ b/css/medium.css
@@ -47,7 +47,7 @@
         grid-column: 1/3;
         grid-row: 2;
         height: auto;
-        background-image: url('Screenshot\(221\).png');
+        background-image: url('g-img.png');
         text-align: center;
     }
     .item3{
