--- a/css/small.css
+++ b/css/small.css
@@ -98,7 +98,7 @@ main {
     grid-column: 1/3;
     grid-row: 2;
     height: auto;
-    background-image: url('Screenshot\(221\).png');
+    background-image: url('g-img.png');
     text-align: center;
     }
 .item3{
