--- a/css/large.css
+++ b/css/large.css
@@ -38,6 +38,8 @@ main{
   grid-column: 2/5;
   grid-row: 1/3;
   height: auto;
+  background-size: 808px 301px;
+  background-repeat: no-repeat;
 }
 .item3{
   grid-column: 5/5;
