--- a/css/small.css
+++ b/css/small.css
@@ -100,6 +100,8 @@ main {
     height: auto;
     background-image: url('g-img.png');
     text-align: center;
+    background-size: 388px 260px;
+    background-repeat: no-repeat;
     }
 .item3{
     grid-column: 1/3;
