--- a/css/large.css
+++ b/css/large.css
@@ -5,6 +5,9 @@
         max-width: 64rem;
         margin:auto;
     }
+    nav ul li a {
+      padding: .5rem 1rem;
+    }
 main{
     margin-bottom: 20px;
 }
