--- a/css/medium.css
+++ b/css/medium.css
@@ -19,13 +19,17 @@
     }
     
     /*----------- NAVIGATION --------------*/
-        nav ul {
+    nav button {display: none;}    
+    nav ul#pn{
             display: flex;
             margin-left: 2%;
+            border-left: 1px solid black;
         }
     
     
-        nav ul li a{padding: .5rem 1rem;}
+        nav ul li a{padding: .5rem 1rem;
+        border:none;
+    border-right: 1px solid black;}
     
     
     /*----------- MAIN --------------*/
