--- a/css/small.css
+++ b/css/small.css
@@ -40,11 +40,20 @@ header h2 {margin: 0; font-weight: normal;}
 nav {
     background-color: #666;
 }
+nav button {
+    margin: 0 2vw;
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    color: rgb(0, 0, 0);
+}
 nav ul {
+    display: none;
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+nav ul.open{display: block;}
 
 nav ul li a {
     display: block;
@@ -53,6 +62,7 @@ nav ul li a {
     text-decoration: none;
     font-size: .9rem;
     text-align: center;
+    border-top: 1px solid black;
 }
 
 
