--- a/css/small.css
+++ b/css/small.css
@@ -217,6 +217,8 @@ form input.submitBtn{
     margin: 0 0 2rem 2%;
     width: 96%;
     max-width: 20rem;
+    height: 50px;
+    font-size: 20px;
 }
 form label.top input:required{
     border-left: red solid 6px;
