--- a/css/small.css
+++ b/css/small.css
@@ -120,6 +120,24 @@ main {
     grid-row: 3;
     height: auto;
 }
+.thing{
+    display: flex;
+    justify-content: center;
+}
+.will{
+    padding: 9px
+}
+.h {
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  }
+.i{
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    border-bottom: 1px solid rgb(0, 0, 0);
+    margin: 20px;
+    padding: 5px;
+}
 .item4{
     grid-column: 1/3;
     grid-row: 4;
@@ -226,3 +244,102 @@ form label.top input:required{
 form label.top input:required:valid{
     border-left: green solid 6px;
 }
+/* HTML Selectors */
+/*article {
+/*    margin: 10px;
+/*    background-color: rgb(128, 92, 49);
+/*}
+/*
+/*h3{
+/*    color: rgb(45, 45, 141);
+/*    font-size: 45px;
+/*}
+/*body {
+/*    font-family: 'Kalam', cursive;
+/*}
+/*
+/*div {
+/*    margin: 10px;
+/*    text-align: center;
+/*    display: grid;
+/*    background-color: beige;
+/*    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+/*}
+/*
+/*footer {
+/*    background-color: gray;
+/*    color: white;
+/*    padding: 5px;
+/*    text-align: center;
+/*}
+/*
+/*header {
+/*    margin: auto;
+/*    text-align: center;
+/*}
+/*
+/*img {
+/*    width: 80%;
+/*}
+/*
+/*label {
+/*    display: inline-block;
+/*    min-width: 120px;
+/*    text-align: right;
+/*}
+/*
+/*main {
+/*    text-align: center;
+/*}
+/*
+/*nav {
+/*    background-color: black;
+/*    color: white;
+/*}
+/*
+/*nav ul {
+/*    display: flex;
+/*    flex-direction: column;
+/*    justify-content: center;
+/*    align-content: space-around;
+/*    margin: 0;
+/*    padding: 0;
+/*}
+/*
+/*nav ul li:first-child {
+/*    display: block;
+/*}
+/*
+/*nav ul li {
+/*    display: none;
+/*    list-style: none;
+/*    margin: 10px;
+/*}
+/*
+/*nav ul li a {
+/*    color: white;
+/*    display: block;
+/*    padding: 10px;
+/*    text-decoration: none;
+/*}
+/*nav ul li a:hover {
+/*    background-color: #efefef;
+/*    color: black;
+/*}
+/*
+/*
+/*.active {
+/*    background-color: white;
+/*    color: black;
+/*}
+/*
+/*.open li {
+/*    display: block;
+/*}
+/*
+/*
+/*#cards {
+/*    display: grid;
+/*    grid-template-columns: 1fr;
+/*}
+/*
