--- a/css/large.css
+++ b/css/large.css
@@ -3,7 +3,7 @@
 
     header, nav, main, footer {
         max-width: 64rem;
-        margin:auto;
+        margin: auto;
     }
     nav ul li a {
       padding: .5rem 1rem;
@@ -70,7 +70,7 @@ main{
   height: auto;
 }
 footer {
-  background-color: #ddd;
+  
   padding: .5rem 2%;
   display: flex;
 flex-direction: row;
@@ -84,7 +84,11 @@ gap: 20px;
 form label.sbs{
   padding: .4rem 0;
 }
-#cards {
+.new{
   grid-template-columns: 1fr 1fr 1fr;
+}
+.newid > article{
+  display: flex;
+  flex-direction: row;
 }
 }
