--- a/css_dc/small.css
+++ b/css_dc/small.css
@@ -15,7 +15,19 @@ body {
     display: grid;
     grid-template-columns: 1fr;
 }
-
+.title{
+   color: rgb(255, 245, 245);
+   font-size: 30px;
+}
+.decoration{
+    font-size: 25px;
+    padding: 25px;
+    background-color: rgb(244, 239, 75);
+    margin-bottom: 157px;
+    color: rgb(211, 80, 80);
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    border-bottom: 3px solid rgb(203, 77, 77);
+}
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
@@ -183,55 +195,6 @@ div.hideme{display: none;}
     column-gap: 20px;
     flex-direction: column-reverse;
     margin-right: 407px;
-}
-.flex1 > p{
-    font-size: 50px;
-    padding: 25px;
-    background-color: rgb(244, 239, 75);
-    margin-bottom: 157px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(204, 4, 4);
-}
-.flex2 > p{
-    font-size: 50px;
-    padding: 25px;
-    background-color: rgb(244, 239, 75);
-    margin-bottom: 218px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(204, 4, 4);
-
-}
-.flex3 > p{
-    font-size: 50px;
-    padding: 25px;
-    background-color: rgb(244, 239, 75);
-    margin-bottom: 218px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(204, 4, 4);
-}
-.flex4 > p{
-    font-size: 50px;
-    padding: 25px;
-    background-color: rgb(244, 239, 75);
-    margin-bottom: 218px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(204, 4, 4);
-}
-.flex5 > p{
-    font-size: 50px;
-    padding: 25px;
-    background-color: rgb(244, 239, 75);
-    margin-bottom: 218px;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(204, 4, 4);
-}
-img:hover{
-    mix-blend-mode: difference;
 }
 .out_of_ideas{
     margin-top: 20px;
