--- a/css/large.css
+++ b/css/large.css
@@ -15,13 +15,7 @@ main{
   max-width: 900px;
   margin: 23px
 }
-.box{
-    background-color: aquamarine;
-    opacity: 0.5;
-    margin: 65px;
-    height: 90px;
-    padding: 7px;
-}
+
 .links{
     margin-left: 480px;
 }
@@ -37,19 +31,27 @@ main{
   grid-row: 1;
   height: auto;
 }
+/*.item2{
+/*  grid-column: 2/5;
+/*  grid-row: 1/3;
+/*  height: auto;
+/*  background-size: 808px 422px;
+/*  background-repeat: no-repeat;
+}*/
 .item2{
   grid-column: 2/5;
   grid-row: 1/3;
-  height: auto;
-  background-size: 808px 422px;
-  background-repeat: no-repeat;
+  
+ /* background-size: 808px 422px;*/
+  /*background-repeat: no-repeat;*/
 }
 .item3{
-  grid-column: 5/5;
-  grid-row: 1;
+  grid-column: 5/6;
+  grid-row: 1/3;
   height: auto;
 }
 .item4{
+  
   grid-column: 1/1;
   grid-row: 2;
   height: auto;
@@ -58,6 +60,7 @@ main{
   grid-column: 5/5;
   grid-row: 2;
   height: auto;
+  display: none;
 }
 .item6{
   grid-column: 1/1;
