--- a/css/medium.css
+++ b/css/medium.css
@@ -4,13 +4,6 @@
 
     /*----------- BODY --------------*/
     
-    .box{
-        background-color: aquamarine;
-        opacity: 0.5;
-        margin: 65px;
-        height: 90px;
-        padding: 7px;
-    }
     
     /*----------- HEADER --------------*/
     
@@ -22,8 +15,8 @@
     nav button {display: none;}    
     nav ul#pn{
             display: flex;
-            margin-left: 2%;
-            border-left: 1px solid black;
+            margin-left: 0%;
+            border: 1px solid black;
         }
     
     
@@ -50,11 +43,9 @@
     .item2{
         grid-column: 1/3;
         grid-row: 2;
-        height: auto;
-        background-image: url('g-img.png');
-        text-align: center;
-        background-size: 808px 260px;
-        background-repeat: no-repeat; 
+        /*background-image: url('g-img.png');*/
+        /*background-size: 808px 260px;*/
+        /*background-repeat: no-repeat;*/ 
     }
     .item3{
         grid-column: 1/2;
