--- a/css/small.css
+++ b/css/small.css
@@ -93,13 +93,14 @@ main {
     width: 90%;
     margin: 0 2%;
 }
-.im{width: 100%;}
+
 .grid-container {
         display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 10px;
        justify-content: center;
        align-content: center;
+       margin: auto;
   }
  
 
@@ -114,14 +115,23 @@ main {
     grid-row: 1;
     height: auto;
 }
+/*--.item2{
+/*--    grid-column: 1/3;
+/*--    grid-row: 2;
+/*--    height: auto;
+/*--    background-image: url('g-img.png');
+/*--    text-align: center;
+/*--    background-size: 388px 260px;
+/*--    background-repeat: no-repeat;
+/*--    }-*/
 .item2{
     grid-column: 1/3;
     grid-row: 2;
     height: auto;
-    background-image: url('g-img.png');
-    text-align: center;
-    background-size: 388px 260px;
-    background-repeat: no-repeat;
+    background-image: url("gyn-city.jpg");
+    background-size: cover;
+    background-position: center;
+    display: grid;
     }
 .item3{
     grid-column: 1/3;
@@ -135,6 +145,19 @@ main {
 .will{
     padding: 9px;
     font-size: 15px;
+}
+.bussiness img{
+    margin: auto;
+    width: 140px;
+    height: 60px;
+    font-size: 14px;
+}
+.bussiness{
+    border-style: solid;
+    border-width: thin;
+    border-color: #cfcfcf;
+    margin: 20px;
+    padding: 10px;
 }
 .h {
     color: white;
@@ -167,6 +190,7 @@ main {
     grid-row: 7;
     height: auto;
 }
+
   .pt{
     color: rgb(242, 242, 242);
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
@@ -184,11 +208,13 @@ footer {
   background-color: rgb(37, 56, 199);
 }
 .box{
-    background-color: aquamarine;
-    opacity: 0.5;
-    margin: 65px;
-    height: 90px;
-    padding: 7px;
+    background-color: #11fc38bc;
+    font-size: 30px;
+    margin: auto;
+    width: auto;
+    border-radius: 15px;
+    padding: 5%;
+    justify-content: center;
 }
 a:hover {
     text-decoration: underline;
@@ -273,15 +299,7 @@ form label.top input:required:valid{
     grid-template-columns: 1fr;
     gap: 25px;
     padding: 25px;
-}
-.grid-container > div {
-    background-color: rgb(241 222 222 / 80%);
-    padding: 20px 0;
-    font-size: 30px;
-    border-radius: 25px 25px 0px 0px;
-  }
-
-  
+} 
 .new > article {
     margin: 10px;
     background-color: rgb(128, 92, 49);
