--- a/css/large.css
+++ b/css/large.css
@@ -22,6 +22,7 @@ main{
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 380px 380px 240px;
     gap: 10px;
     justify-content: center;
     margin: auto;
@@ -49,6 +50,8 @@ main{
   grid-column: 5/6;
   grid-row: 1/3;
   height: auto;
+  display: flex;
+  flex-direction: column;
 }
 .item4{
   
@@ -72,7 +75,7 @@ main{
   grid-row: 3;
   height: auto;
 }
-footer {
+.footer {
   
   padding: .5rem 2%;
   display: flex;
