--- a/css/medium.css
+++ b/css/medium.css
@@ -37,42 +37,45 @@
     }
       .item1{
         grid-column: 1/3;
-        grid-row: 1;
+        grid-row: 2;
         height: auto;
     }
     .item2{
         grid-column: 1/3;
-        grid-row: 2;
+        grid-row: 1;
         /*background-image: url('g-img.png');*/
         /*background-size: 808px 260px;*/
         /*background-repeat: no-repeat;*/ 
     }
     .item3{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 3;
         height: auto;
+        display: flex;
+        flex-direction: row;
     }
     .item4{
         grid-column: 2/3;
-        grid-row: 3;
+        grid-row: 7;
         height: auto;
     }
     .item5{
+        display: none;
         grid-column: 1/2;
-        grid-row: 5;
+        grid-row: 7;
         height: auto;
     }
     .item6{
-        grid-column: 2/3;
-        grid-row: 5;
+        grid-column: 1/2;
+        grid-row: 7;
         height: auto;
     }
     .item7{
         grid-column: 1/3;
-        grid-row: 7;
+        grid-row: 4;
         height: auto;
     }
-    footer {
+    .footer {
         
         padding: .5rem 2%;
         display: flex;
