--- a/css/small.css
+++ b/css/small.css
@@ -12,7 +12,23 @@ body {
     margin: 0;
     background-color: #131f45;
 }
-
+.grid{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.title{
+   color: rgb(255, 245, 245);
+   font-size: 30px;
+}
+.decoration{
+    font-size: 25px;
+    padding: 25px;
+    background-color: rgb(244, 239, 75);
+    margin-bottom: 157px;
+    color: rgb(211, 80, 80);
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    border-bottom: 3px solid rgb(203, 77, 77);
+}
 
 /*----------- HEADER --------------*/
 header {
@@ -42,6 +58,47 @@ header h2 {margin: 0; font-weight: normal;}
     border-radius: 50%;
 }
 /*----------- NAVIGATION --------------*/
+/*--nav {
+    background-color: #666;
+}
+nav button {
+    margin: 0 2vw;
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    color: rgb(0, 0, 0);
+}
+nav ul {
+    display: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+nav ul.open{display: block;}
+
+nav ul li a {
+    display: block;
+    color: #eee;
+    padding: .5rem 0;
+    text-decoration: none;
+    font-size: .9rem;
+    text-align: center;
+    border-top: 1px solid black;
+}
+
+
+nav ul li a:hover {
+    background-color: #aaa;
+    color: #333;
+}
+nav ul li.active a {
+    background-color: #000;
+    color: #fff;
+}--*/
+.active{
+    background-color: #000;
+    color: #fff;
+}
 nav {
     background-color: #666;
 }
@@ -108,12 +165,13 @@ main {
     background-color: rgba(224, 133, 133, 0.8);
     text-align: center;
     padding: 20px 0;
-    font-size: 10px;
   }
 .item1{
     grid-column: 1/3;
     grid-row: 1;
     height: auto;
+    border-radius: 15px;   
+    font-size: 20px;
 }
 /*--.item2{
 /*--    grid-column: 1/3;
@@ -132,11 +190,14 @@ main {
     background-size: cover;
     background-position: center;
     display: grid;
+    border-radius: 15px;
     }
 .item3{
     grid-column: 1/3;
     grid-row: 3;
     height: auto;
+    border-radius: 15px;
+    font-size: 11px;
 }
 .thing{
     display: flex;
@@ -148,8 +209,8 @@ main {
 }
 .bussiness img{
     margin: auto;
-    width: 140px;
-    height: 60px;
+    width: 80px;
+    height: 30px;
     font-size: 14px;
 }
 .bussiness{
@@ -157,7 +218,7 @@ main {
     border-width: thin;
     border-color: #cfcfcf;
     margin: 20px;
-    padding: 10px;
+    padding: 30px;
 }
 .h {
     color: white;
@@ -174,21 +235,27 @@ main {
     grid-column: 1/3;
     grid-row: 4;
     height: auto;
+    border-radius: 15px;
 }
 .item5{
+    display: none;
     grid-column: 1/3;
     grid-row: 5;
     height: auto;
+    border-radius: 15px;
 }
 .item6{
     grid-column: 1/3;
     grid-row: 6;
     height: auto;
+    border-radius: 15px;
+    padding: 10px;
 }
 .item7{
     grid-column: 1/3;
     grid-row: 7;
     height: auto;
+    border-radius: 15px;
 }
 
   .pt{
@@ -197,7 +264,35 @@ main {
   }
 
 /*----------- FOOTER --------------*/
-footer {
+.flex-container {
+    display: flex;
+    background-color: DodgerBlue;
+    height: 250px;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(26 25 25);
+  }
+  .flex-container > div {
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+  }
+  .a{
+    color: azure;
+    font-size: 25px;
+  }
+  .a > #demo2{color: azure;
+  font-size: 25px;}
+  a{margin: 0;}
+ .f > #d2{
+  color: rgb(245, 252, 154);
+  font-size: 20px;
+ }
+ .f{
+  color:rgb(245, 252, 154);
+  font-size: 20px;
+ }
+.footer {
     
     padding: .5rem 2%;
     display: flex;
@@ -309,7 +404,7 @@ form label.top input:required:valid{
     font-size: 12px;
     max-width: 300px;
    max-height: 300px;
-   padding: 18px;
+   padding: 11px;
 
 }
 .newid > article {
@@ -336,4 +431,11 @@ h3{
 }
 .newid > article > h4{
    padding: 20px;
+}
+article > img{
+    width: 90px;
+}
+.dip{
+    display: flex;
+    background-color: #131f45;
 }
