--- a/css/small.css
+++ b/css/small.css
@@ -149,6 +149,30 @@ nav ul li.active a {
     color: #fff;
 }
 /*----------- MAIN --------------*/
+.dirg{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 0.5fr;
+}
+.coisa1{
+    grid-column: 1/2;
+    grid-row: 1;
+}
+.coisa2{
+    grid-column: 1/3;
+    grid-row: 2;
+    background-color: #666;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    border-radius: 20px;
+}
+.coisa3{
+    grid-column: 2/3;
+    grid-row: 1;
+    width: auto;
+    margin: 40px;
+}
 .weather_icon{
     width: 60px;
 }
