--- a/css_dc/medium.css
+++ b/css_dc/medium.css
@@ -33,7 +33,7 @@
     
     /*----------- MAIN --------------*/
     
-    img:hover{
+    picture > img:hover{
         mix-blend-mode: difference;
     }
     
