--- a/css/small.css
+++ b/css/small.css
@@ -14,6 +14,17 @@ html {
 
 
 /*----------- BODY --------------*/
+.cli{
+    width: 90px;
+    height: 40px;
+    font-size: 15px;
+}
+.cli2{
+    width: 130px;
+    height: 40px;
+    font-size: 15px;
+    padding: 1px;
+}
 .buttons {
     display: flex;
     justify-content: center;
