--- a/css/small.css
+++ b/css/small.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Rock+Salt&display=swap');
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+}
+h1, h3{
+    font-family: 'roboto', sans-serif;
+}
+p{
+    font-size: initial;
 }
 
 /*----------- apply a natural box layout model to all elements --------------*/
@@ -38,7 +45,7 @@ html {
 }
 
 article>h3 {
-    margin: 30px
+    margin: 7px
 }
 
 body {
@@ -46,6 +53,7 @@ body {
     font-family: Verdana, sans-serif;
     margin: 0;
     background-color: #131f45;
+    font-family: 'Rock Salt', 'roboto',sans-serif;
 }
 
 .grid {
@@ -101,6 +109,7 @@ header h2 {
     text-align: center;
     grid-column: 1 /span 2;
     display: flex;
+    font-family: 'roboto', sans-serif;
 }
 
 .logo {
@@ -210,11 +219,13 @@ nav ul li.active a {
 .coisa2 {
     grid-column: 1/3;
     grid-row: 2;
-    background-color: #666;
+    background-color: rgb(28, 27, 27);
     display: flex;
     text-align: center;
     flex-direction: column;
     border-radius: 20px;
+    width: auto;
+    padding: auto;
 }
 
 .coisa3 {
@@ -316,6 +327,9 @@ main {
     border-color: #cfcfcf;
     margin: 20px;
     padding: 30px;
+   font-size: 8px;
+   width: 180px;
+   height: 400px;
 }
 
 .h {
@@ -337,6 +351,9 @@ main {
     height: auto;
     border-radius: 15px;
 }
+.item4 p{
+    font-size: 13px;
+}
 
 .item5 {
     display: none;
@@ -352,6 +369,9 @@ main {
     height: auto;
     border-radius: 15px;
     padding: 10px;
+}
+.item6  p{
+font-size: 13px;
 }
 
 .item7 {
@@ -414,6 +434,7 @@ a {
     color: rgb(242, 242, 242);
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
     background-color: rgb(37, 56, 199);
+    font-family: 'roboto', sans-serif;
 }
 
 footer {
@@ -433,7 +454,9 @@ footer {
 a:hover {
     text-decoration: underline;
 }
-
+.links{
+    font-family: 'roboto', sans-serif;
+}
 a {
     color: #eee;
     text-decoration: none;
@@ -449,7 +472,13 @@ div#message {
     height: 50px;
     text-align: center;
     margin: 20px;
-    padding: 14px;
+    padding: 7px;
+}
+.new .color{
+    font-size: 8px;
+}
+.newid .color{
+    font-size: 12px;
 }
 
 div.showme {
@@ -512,7 +541,7 @@ form input.submitBtn {
     color: #eee;
     border-radius: 1rem;
     padding: .75re 1.5rem;
-    margin: 0 0 2rem 2%;
+    margin: 49px 0 2rem 2%;
     width: 96%;
     max-width: 20rem;
     height: 50px;
