--- a/css_dc/small.css
+++ b/css_dc/small.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Rock+Salt&display=swap');
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
@@ -6,12 +7,15 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 
 /*----------- BODY --------------*/
-
+h1, h3{
+    font-family: 'roboto', sans-serif;
+}
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
     margin: 0;
     background-color: #131f45;
+    font-family: 'Rock Salt', 'roboto',sans-serif;
 }
 .grid{
     display: grid;
@@ -154,6 +158,10 @@ main {
   align-items: center;
   color: rgb(242, 242, 242);
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  font-family: 'roboto', sans-serif;
+}
+.links{
+    font-family: 'roboto', sans-serif;
 }
 footer{
     background-color: rgb(37, 56, 199);
