--- a/css/small.css
+++ b/css/small.css
@@ -101,7 +101,7 @@ header h2 {
 }
 
 .date {
-    background-color: #aaa;
+    background-color: rgb(74, 74, 74);
     padding: 10px;
     margin: auto;
     margin-top: 10px;
