--- a/css/small.css
+++ b/css/small.css
@@ -475,7 +475,7 @@ a {
 div#message {
     background-color: red;
     color: #fff;
-    height: 50px;
+    height: auto;
     text-align: center;
     margin: 20px;
     padding: 7px;
