--- a/css/small.css
+++ b/css/small.css
@@ -519,7 +519,7 @@ form label.top,
 form div {
     display: block;
     padding-top: 1rem;
-    color: #e68b77;
+    color: #fdcdc2;
     font-size: .8rem;
 }
 
