--- a/css/small.css
+++ b/css/small.css
@@ -288,7 +288,7 @@ main {
     grid-column: 1/3;
     grid-row: 2;
     height: auto;
-    background-image: url("gyn-city.jpg");
+    background-image: url("gyn-city-min.jpg");
     background-size: cover;
     background-position: center;
     display: grid;
