--- a/css/large.css
+++ b/css/large.css
@@ -40,7 +40,7 @@ main{
 /*  background-repeat: no-repeat;
 }*/
 .item2{
-  grid-column: 2/5;
+  grid-column: 2/6;
   grid-row: 1/3;
   
  /* background-size: 808px 422px;*/
@@ -50,13 +50,13 @@ main{
   grid-column: 5/6;
   grid-row: 1/3;
   height: auto;
-  display: flex;
+  display: block;
   flex-direction: column;
 }
 .item4{
   
   grid-column: 1/1;
-  grid-row: 2;
+  grid-row: 1;
   height: auto;
 }
 .item5{
@@ -66,6 +66,11 @@ main{
   display: none;
 }
 .item6{
+  grid-column: 1/1;
+  grid-row: 2;
+  height: auto;
+}
+.item9{
   grid-column: 1/1;
   grid-row: 3;
   height: auto;
