--- a/css/small.css
+++ b/css/small.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Open+Sans:wght@300&family=Roboto:ital,wght@1,300&family=Rock+Salt&family=Signika:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Rock+Salt&display=swap');
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {
@@ -8,9 +9,13 @@ h1, h3{
     font-family: 'roboto', sans-serif;
 }
 p{
-    font-size: initial;
+    font-size: 21px;
 }
-
+.mystyle{
+    background-color: #f9ffa7;
+    padding: 20px;
+   margin: 10px 150px 10px 150px;
+}
 /*----------- apply a natural box layout model to all elements --------------*/
 * {
     -moz-box-sizing: border-box;
@@ -25,6 +30,7 @@ p{
     width: 90px;
     height: 40px;
     font-size: 15px;
+    background-color: #a3ffff;
 }
 .cli2{
     width: 130px;
@@ -52,8 +58,8 @@ body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
     margin: 0;
-    background-color: #131f45;
-    font-family: 'Rock Salt', 'roboto',sans-serif;
+    background-color: #1b4513;
+    font-family: 'Libre Baskerville', 'roboto',sans-serif;
 }
 
 .grid {
@@ -71,15 +77,16 @@ body {
     padding: 25px;
     background-color: rgb(244, 239, 75);
     margin-bottom: 157px;
-    color: rgb(211, 80, 80);
+    color: rgb(163, 211, 80);
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    border-bottom: 3px solid rgb(203, 77, 77);
+    border-bottom: 3px solid rgb(203, 190, 77);
 }
 
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
-    background-color: rgb(37, 56, 199);
+    background-color: rgb(9, 112, 98);
+    text-align: center;
     display: grid;
     grid-template-columns: 75px auto;
     color: rgb(242, 242, 242);
@@ -101,7 +108,7 @@ header h2 {
 }
 
 .date {
-    background-color: rgb(74, 74, 74);
+    background-color: rgb(96, 75, 75);
     padding: 10px;
     margin: auto;
     margin-top: 10px;
@@ -113,10 +120,48 @@ header h2 {
 }
 
 .logo {
-    max-width: 120px;
+    max-width: 220px;
     border-radius: 50%;
 }
-
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  #favchap, #favchap2, #favchap3{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  .div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+  
 /*----------- NAVIGATION --------------*/
 /*--nav {
     background-color: #666;
@@ -161,7 +206,7 @@ nav ul li.active a {
 }
 
 nav {
-    background-color: #666;
+    background-color: rgb(104, 63, 63);
 }
 
 nav button {
@@ -182,13 +227,16 @@ nav ul {
 nav ul.open {
     display: block;
 }
-
+.logo:hover{
+    background-color: white;
+   color: white;
+}
 nav ul li a {
     display: block;
     color: #eee;
     padding: .5rem 0;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 20px;
     text-align: center;
     border-top: 1px solid black;
 }
@@ -262,9 +310,9 @@ main {
 
 
 .grid-container>div {
-    background-color: rgba(224, 133, 133, 0.8);
+    background-color: rgba(215, 224, 133, 0.8);
     text-align: center;
-    padding: 20px 0;
+    
 }
 
 .item1 {
@@ -272,7 +320,7 @@ main {
     grid-row: 1;
     height: auto;
     border-radius: 15px;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 /*--.item2{
@@ -286,13 +334,17 @@ main {
 /*--    }-*/
 .item2 {
     grid-column: 1/3;
-    grid-row: 2;
-    height: auto;
-    background-image: url("gyn-city-min.jpg");
+    grid-row: 1;
+    background-image: url("fruits.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    display: grid;
+    height: auto;
     border-radius: 15px;
+    padding: 136px;
+    background-position: center;
+}
+#welcome{
+    font-size: 60px;
 }
 
 .item3 {
@@ -300,7 +352,7 @@ main {
     grid-row: 3;
     height: auto;
     border-radius: 15px;
-    font-size: 11px;
+    font-size: 20px;
 }
 
 .thing {
@@ -310,14 +362,14 @@ main {
 
 .will {
     padding: 9px;
-    font-size: 15px;
+    font-size: 19px;
 }
 
 .bussiness img {
     margin: auto;
     width: 80px;
     height: 30px;
-    font-size: 14px;
+    font-size: 19px;
 }
 
 .bussiness {
@@ -333,7 +385,7 @@ main {
 
 .h {
     color: white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: 2px 2px 2px black, 0 0 25px rgb(0 255 220), 0 0 5px rgb(0 30 7);
 }
 
 figcaption {
@@ -342,6 +394,7 @@ figcaption {
     border-bottom: 1px solid rgb(0, 0, 0);
     margin: 20px;
     padding: 5px;
+
 }
 
 .item4 {
@@ -351,7 +404,7 @@ figcaption {
     border-radius: 15px;
 }
 .item4 p{
-    font-size: 13px;
+    font-size: 20px;
 }
 
 .item5 {
@@ -369,8 +422,17 @@ figcaption {
     border-radius: 15px;
     padding: 10px;
 }
+
+.item9 {
+   height: auto;
+   grid-column: 1/3;
+   grid-row: 2;
+   border-radius: 15px;
+   padding: 10px;
+}
 .item6  p{
-font-size: 13px;
+font-size: 21px;
+padding: 9px;
 }
 
 .item7 {
@@ -432,16 +494,17 @@ a {
     align-items: center;
     color: rgb(242, 242, 242);
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    background-color: rgb(37, 56, 199);
+    background-color:rgb(9, 112, 98);
     font-family: 'roboto', sans-serif;
 }
 
 footer {
-    background-color: rgb(37, 56, 199);
+    background-color: rgb(104, 63, 63);
 }
 
+
 .box {
-    background-color: #11fc38bc;
+    background-color: rgb(9, 112, 98);
     font-size: 30px;
     margin: auto;
     width: auto;
@@ -571,12 +634,7 @@ form label.top input:required:valid {
     padding: 25px;
 }
 
-.new {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 25px;
-    padding: 25px;
-}
+
 
 .new>article {
     margin: 10px;
@@ -626,7 +684,7 @@ form label.top input:required:valid {
 }
 
 h3 {
-    color: rgb(45, 45, 141);
+    color:rgb(104, 63, 63);
     font-size: 14px;
 }
 
@@ -640,5 +698,12 @@ article>img {
 
 .dip {
     display: flex;
-    background-color: #131f45;
+    background-color: rgb(104, 63, 63);
+}
+.social img{
+    width: 65px;
+}
+.social{
+    display: flex;
+    column-gap: 10px;
 }
